v3: fix video position on mobile, add QR image

--- a/src/index.less
+++ b/src/index.less
@@ -34,7 +34,7 @@ code {
 
 @media screen and (max-width: 480px) {
   .video-container {
-    top: 20em;
+    top: 12em;
   }
 }
 
